--- a/app/views/users/_follow-button.html.erb
+++ b/app/views/users/_follow-button.html.erb
@@ -1,5 +1,6 @@
 <% if current_user.following?(user) %>
-  <span class="follow-btn" onclick="ModalFollow()">フォロー解除</span>
+  <%# <span class="follow-btn" onclick="ModalFollow()">フォロー解除</span> %>
+  <span class="follow-btn">フォロー解除</span>
   
   <%# <%= link_to 'フォロー解除', unfollow_path(user), method: :post, class:'btn btn-info', remote: true %> 
 <% else %>
