--- a/app/views/users/show_our.html.erb
+++ b/app/views/users/show_our.html.erb
@@ -17,7 +17,6 @@
       </p>
       <% end %>
     </div>
-
   </div>
   <div class="event-display">
     <div class="event-container">
@@ -25,113 +24,104 @@
         <li><a class="active" data-id="follower">フォロワー</a></li>
         <li><a data-id="follow">フォロー中</a></li>
       </ul>
-      <button onclick="ModalFollow()">a</button>
       <section class="content active" id="follower">
-      <div id="follow-modal" class="hidden">
-        <p>○○さんのフォローを解除しますか？</p>
-        <div class="unlock-btn" id="unlock">フォロー解除</div>
-        <div class="unlock-btn" id="cancel">キャンセル</div>
-      </div>
-        <%# フォロワーはいません %>
-        <% @users.each do |user| %>
-
-          <% unless user == current_user %>
-            <div class="follower">
-            <p><%= user.name %><p>
-              <span id='follow-button_<%= user.id %>'>
-              <%= render 'users/follow-button', user: user %>
-              </span>
-              
-            </div>
+        <% if follower.count == 0 %>
+          フォロワーはいません
+        <% else %>
+          <% follower.each do |user| %>
+            <div class="follower_view">
+              <% unless user == current_user %>
+                <div class="follower">
+                  <p><%= user.name %><p>
+                  <span id='follow-button_<%= user.id %>'>
+                    <%= render 'users/follow-button', user: user %>
+                  </span>  
+                </div>
+                <div class="follow-modal hidden">
+                  <p><%= user.name %>さんのフォローを解除しますか？</p>
+                  <%= link_to unfollow_path(user), method: :post, remote: true do %> 
+                    <div class="unlock-btn">フォロー解除</div>
+                  <% end %>
+                  <div class="unlock-btn cancel">キャンセル</div>
+                </div>
+              </div>
+            <% end %>
           <% end %>
-          <% end %>
-          <script>
-         
-            $("#follow-button_<%= @user.id %>").html("<%= j(render 'users/follow-button', user: @user) %>");
-            $("#follow-button_<%= @user.id %>").html("<%= j(render 'users/follow-button', user: @user) %>");
-          </script>
-            <%# <% if current_user.following?(user) %/>
-          <div class="follower">
-            <p><%= user.name %/><p>
-              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete ,class: "follow-btn" ,onclick: "ModalFollow()" %/>
-          </div>
-          
-          
-            <% else %>
-              <%# <%= link_to "フォローする", user_relationships_path(user.id), method: :post ,class: "follow-btn" %/> %/>
-            <% end %/>
-        <% end %/> %>
-      </section>
-      <section class="content" id="follow">
-        フォロー中はありません。
+        <% end %>
       </section>
     </div>
   </div>
 </div>
 
-
 <% @users.each do |user| %>
   <div style="background-color:green">
-  <%= user.name %>
-  <% if current_user.following?(user) %>
-    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
-  <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
-  <% end %>
+    <%= user.name %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォロー外す", unfollow_path(user), method: :post, class:'btn btn-info', remote: true %>
+    <% else %>
+      <%= link_to "フォローする", follow_path(user), method: :post, class:'btn btn-default', remote: true  %>
+    <% end %>
   </div>
 <% end %>
 
 <%= render 'relationships/follow_list' %>
 
-
 <script>
-// タブメニュー
+  // タブメニュー
 
-$(document).on('turbolinks:load', function(){
-  const menuItems = document.querySelectorAll('.tab-menu li a');
-  const contents = document.querySelectorAll('.content');
-  
-  menuItems.forEach(clickedItem => {
-    clickedItem.addEventListener('click', e => {
-      e.preventDefault();
+  $(document).on('turbolinks:load', function(){
+    const menuItems = document.querySelectorAll('.tab-menu li a');
+    const contents = document.querySelectorAll('.content');
+    
+    menuItems.forEach(clickedItem => {
+      clickedItem.addEventListener('click', e => {
+        e.preventDefault();
 
-      menuItems.forEach(item => {
-        item.classList.remove('active');
+        menuItems.forEach(item => {
+          item.classList.remove('active');
+        });
+        clickedItem.classList.add('active');
+
+
+        contents.forEach(content => {
+          content.classList.remove('active');
+        });
+
+        document.getElementById(clickedItem.dataset.id).classList.add('active');
+
       });
-      clickedItem.classList.add('active');
-
-
-      contents.forEach(content => {
-        content.classList.remove('active');
-      });
-
-      document.getElementById(clickedItem.dataset.id).classList.add('active');
-
     });
+
+
+
+  // フォロワーモーダル
+
+
+    const follower_views = document.querySelectorAll('.follower_view');
+
+
+    follower_views.forEach(function(f){
+      const follow_btn = f.querySelector('.follow-btn');
+      const cancel = f.querySelector('.cancel');
+
+      follow_btn.addEventListener('click',()=>{
+        f.querySelector('.follow-modal').classList.remove('hidden');
+        document.getElementById('mask').classList.remove('hidden');
+
+      })
+      cancel.addEventListener('click', ()=>{
+        f.querySelector('.follow-modal').classList.add('hidden');
+        document.getElementById('mask').classList.add('hidden');
+        
+      });
+    })
+    
+
+    $("#follow-button_<%= @user.id %>").html("<%= j(render 'users/follow-button', user: @user) %>");
+    $("#follow-button_<%= @user.id %>").html("<%= j(render 'users/follow-button', user: @user) %>");
+
   });
-
-
-
-// フォロワーモーダル
-
-
-  const mask = document.getElementById('mask');
-  const cancel = document.getElementById('cancel');
-  const follow_modal = document.querySelector('#follow-modal');
-
-  cancel.addEventListener('click', ()=>{
-    follow_modal.classList.add('hidden');
-    mask.classList.add('hidden');
-  });
-
-
-});
-  
-function ModalFollow(){
-  const follow_modal = document.querySelector('#follow-modal')
-  mask.classList.remove('hidden');
-  follow_modal.classList.remove('hidden');
-}
+    
 
 
 </script>
