--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,12 @@
       <% end %>
     </div>
     <p><%= @user.name %></p>
-    <p>フォロー：３ フォロワー：４</p>
+    <div>
+      <p>フォロー数: <%= @user.followings.count %> フォロワー数: <%= @user.followers.count %></p>
+      <%= link_to show_our_path do %>
+        <button class="follow_viewer">一覧</button>
+      <% end %>
+    </div>
     <div class="profile-coment">
       <% if @user.comment == nil || @user.comment == "" %>
         <span>プロフィールコメント<span>
