--- a/app/views/users/_follow-button.html.erb
+++ b/app/views/users/_follow-button.html.erb
@@ -1,8 +1,13 @@
-<% if current_user.following?(user) %>
-  <%# <span class="follow-btn" onclick="ModalFollow()">フォロー解除</span> %>
-  <span class="follow-btn">フォロー解除</span>
-  
-  <%# <%= link_to 'フォロー解除', unfollow_path(user), method: :post, class:'btn btn-info', remote: true %> 
-<% else %>
-  <%= link_to 'フォローする', follow_path(user), method: :post, class:'btn btn-default', remote: true %>
-<% end %>
+<span id='follow-button_<%= user.id %>' > 
+  <% if current_user.following?(user) %>
+    <span class="follow-btn unlock">フォロー解除</span>
+    
+    <%# <%= link_to 'フォロー解除', unfollow_path(user), method: :post, class:'btn btn-info', remote: true %> 
+  <% else %>
+    <%= link_to 'フォローする', follow_path(user), method: :post, class:'follow-btn', remote: true %>
+  <% end %>
+</span>
+
+<script>
+
+</script>
