--- a/app/views/users/show_our.html.erb
+++ b/app/views/users/show_our.html.erb
@@ -34,17 +34,17 @@
         <li><a data-id="follower">フォロワー</a></li>
       </ul>
       <section class="content active" id="follow">
-        <% if follower.count == 0 %>
+        <% if following.count == 0 %>
           フォロワーはいません
         <% else %>
-          <% follower.each do |user| %>
+          <% following.each do |user| %>
             <div class="follower_view">
               <% unless user == current_user %>
                 <div class="follower">
-                  <p><%= user.name %><p>
-                  <span id='follow-button_<%= user.id %>'>
+                  <p><%= user.name %></p>
+                
                     <%= render 'users/follow-button', user: user %>
-                  </span>  
+             
                 </div>
                 <div class="follow-modal hidden">
                   <p><%= user.name %>さんのフォローを解除しますか？</p>
@@ -58,7 +58,31 @@
           <% end %>
         <% end %>
       </section>
-      <section id="follower">
+      <section class="content" id="follower">
+        <% if followers.count == 0 %>
+          フォロワーはいません
+        <% else %>
+          <% followers.each do |user| %>
+            <div class="follower_view">
+              <% unless user == current_user %>
+                <div class="follower">
+                  <p><%= user.name %></p>
+                  
+                    <%= render 'users/follow-button', user: user %>
+                  
+                </div>
+                <div class="follow-modal hidden">
+                  <p><%= user.name %>さんのフォローを解除しますか？</p>
+                  <%= link_to unfollow_path(user), method: :post, remote: true do %> 
+                    <div class="unlock-btn">フォロー解除</div>
+                  <% end %>
+                  <div class="unlock-btn cancel">キャンセル</div>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        <% end %>
+      </section>
     </div>
   </div>
 </div>
@@ -115,8 +139,10 @@
       const cancel = f.querySelector('.cancel');
 
       follow_btn.addEventListener('click',()=>{
-        f.querySelector('.follow-modal').classList.remove('hidden');
-        document.getElementById('mask').classList.remove('hidden');
+        if (follow_btn.classList.contains('unlock')){
+          f.querySelector('.follow-modal').classList.remove('hidden');
+          document.getElementById('mask').classList.remove('hidden');
+        } 
 
       })
       cancel.addEventListener('click', ()=>{
